works page nearly completed, just have to fix some alignment

--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,103 @@
 * {
-  color: white;
-  list-style: none;
-  font-family: "Roboto", sans-serif;
-  font-weight: bold;
+    list-style: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
 }
 
 body {
-  width: 100%;
-  background-color: #1c1a19;
-  margin: 0;
-  background-image: url("imgs/Group.svg");
-  background-repeat: no-repeat;
-  background-position-x: right;
-  background-position-y: bottom;
+    width: 100%;
+    background-color: #1c1a19;
+    margin: 0;
 }
 
 header {
-  width: 100%;
-  height: 8vh;
-  background-color: #3c3c33;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-p {
-  margin-left: 5%;
-  font-size: 18px;
+    width: 100%;
+    height: 8vh;
+    background-color: #3c3a39;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 18px;
+    color: white;
 }
 
 .burgir {
-  height: 12px;
-  width: 18px;
-  margin-right: 5%;
+    height: 12px;
+    width: 18px;
+    margin-right: 8%;
+}
+
+.doe {
+    margin-left: 5%;
 }
 
 .bio {
-  padding: 10vh 3vh;
+    padding: 10vh 3vh;
+    background-image: url("imgs/Group.svg");
+    background-repeat: no-repeat;
+    background-position-x: right;
+    background-position-y: bottom;
+    color: white;
 }
 
 .social_media {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 200px;
-  height: 40px;
-  padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 200px;
+    height: 40px;
+    padding: 0;
 }
 
 h1 {
-  font-family: "Crete Round", sans-serif;
-  font-size: 56px;
-  color: #ff6b00;
-  font-weight: normal;
-  margin-bottom: 25px;
+    font-family: "Crete Round", sans-serif;
+    font-size: 56px;
+    color: #ff6b00;
+    font-weight: normal;
+    margin-bottom: 25px;
 }
 
 h2 {
-  font-size: 24px;
+    font-size: 24px;
 }
 
 .descrip {
-  font-family: 'Poppins', sans-serif;
-  font-weight: normal;
-  margin-left: 0;
-  font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    margin-left: 0;
+    font-size: 16px;
+}
+
+.grid-container {
+    display: grid;
+}
+
+.myworks {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: black;
+    padding: 3vh;
+    justify-content: center;
+}
+
+h3 {
+    color: black;
+    font-weight: normal;
+    font-size: 40px;
+    font-family: "Crete Round", sans-serif;
+    padding: 5vh 0;
+    border-bottom-style: solid;
+    border-width: 1px;
+}
+
+.placeholder {
+    margin-top: 5vh;
+    display: flex;
+    align-self: center;
+}
+
+.whitebutton {
+    padding: 10px 12px;
 }
